--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -34,3 +34,35 @@ article p img {
 article a {
   @apply text-red-600;
 }
+
+article a:hover {
+  @apply text-red-800;
+}
+
+article ul {
+  @apply list-disc list-inside;
+}
+
+article ol {
+  @apply list-decimal list-inside;
+}
+
+article li {
+  @apply mb-1;
+}
+
+article blockquote {
+  @apply border-l-4 border-red-600 pl-2 italic;
+}
+
+article pre {
+  @apply bg-gray-800 p-2 rounded-lg overflow-x-auto;
+}
+
+article code {
+  @apply text-sm;
+}
+
+article table {
+  @apply w-full table-auto;
+}
